Add action.yaml info

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: The name of your action here
-description: Provide a description here
-author: Your name or organization here
+name: Oasis CLI
+description: Oasis CLI for interacting with the Oasis Network
+author: Oasis Protocol Foundation
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
@@ -9,15 +9,10 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: Your input description here
+  version:
+    description: Oasis CLI version
     required: true
-    default: '1000'
-
-# Define your outputs here.
-outputs:
-  time:
-    description: Your output description here
+    default: '0.16.0'
 
 runs:
   using: node24
