--- a/action.yml
+++ b/action.yml
@@ -4,8 +4,8 @@ author: Oasis Protocol Foundation
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
-  icon: heart
-  color: red
+  icon: terminal
+  color: blue
 
 # Define your inputs here.
 inputs:
